# wl-nightlight

./: .gitignore  Cargo.toml  README.md  default.nix  example-config.ini  flake.nix
extra/: example.toml
src/: color.rs  config.rs  event.rs  lib.rs  light.rs  main.rs  mode.rs  schedule.rs  sun_time.rs  sunrise.rs  switch_mode.rs  test_utils.rs  timer.rs  wayland.rs
src/config/: parser.rs
src/mode/: sun_time.rs  test_utils.rs
src/timer/: test_utils.rs
src/wayland/: client.rs  output.rs  state.rs
